pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: echo-server-pod
spec:
  restartPolicy: Always
  imagePullSecrets:
  - name: gcr-json-key
  containers:
  - image: echo-server:v1
    imagePullPolicy: Always
    name: echo-server
    resources:
      requests:
        cpu: "20m"
        memory: "55M"
      limits:
        cpu: "100m"
        memory: "100M"
    livenessProbe:
      httpGet:
        path: /
        port: 1323
      initialDelaySeconds: 3
      timeoutSeconds: 10
      periodSeconds: 10
    readinessProbe:
      httpGet:
        path: /
        port: 1323
      initialDelaySeconds: 3
      timeoutSeconds: 10
      periodSeconds: 10
    ports:
    - containerPort: 1323
      name: http
