svc-v1.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-server-svc-v1
spec:
  selector:
    app: echo-server
    version: v1
  ports:
  - name: http-echo-server
    port: 1323
    targetPort: 1323
