svc-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-server-svc-v2
spec:
  selector:
    app: echo-server
    version: v2
  ports:
  - name: http-echo-server
    port: 1323
    targetPort: 1323
