svc-v3.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-server-svc-v3
spec:
  selector:
    app: echo-server
    version: v3
  ports:
  - name: http-echo-server
    port: 1323
    targetPort: 1323
