svc.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-server-svc
spec:
  selector:
    app: echo-server
  ports:
  - name: http-echo-server
    port: 1323
    targetPort: 1323
